[tool.poetry]
name = "sow_and_reap_support"
version = "0.1.0"
description = ""
authors = ["Srinivas Aripirala"]
readme = "README.md"
packages = [{include = "sow_and_reap_support", from = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 