[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sow_and_reap_support"
version = "0.1.0"
description = ""
authors = [
    {name = "Srinivas Aripirala"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = ["fastkml (>=1.1.0,<2.0.0)", "shapely (>=2.0.7,<3.0.0)", "lxml (>=5.3.1,<6.0.0)", "pykml (>=0.2.0,<0.3.0)"]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "sow_and_reap_support", from = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 